--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-<script src="brca.js"></script>
+<div class="container" id="brcaExchangeDiv">
+    <h2>BRCA WebExchange <a href="https://github.com/episphere/brca" target="_blank"><i class="fa fa-github-alt" aria-hidden="true" id="catIcon"></i></a> <span id="msg" style="font-size:small"></span></h2>
+    <p>Web-based analytics of BRCA1/2 genetic variants at <a href="https://brcaexchange.org" target="_blank">brcaexchange.org</a>. </p>
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+<script src="brcaVar.js"></script>
+<!-- 
 [<a href="https://github.com/episphere/brca" target="_blank">source code</a>] Nothing to see here just yet. For a while all the action will take place in the Browser or Node console.
+-->
