--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <script src="https://unpkg.com/d3@5.7.0/dist/d3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js"></script>
+    <script src="http://unpkg.com/dc@3/dc.js"></script>
+    <link href="http://unpkg.com/dc@3/dc.css">
 <head>
 <body style="background-color:silver">
 
@@ -11,6 +15,8 @@
 <div class="container" id="brcaExchangeDiv">
     <h2>BRCA WebExchange <a href="https://github.com/episphere/brca" target="_blank"><i class="fa fa-github-alt" aria-hidden="true" id="catIcon"></i></a> <span id="msg" style="font-size:small"></span></h2>
     <p>Web-based analytics of BRCA1/2 genetic variants at <a href="https://brcaexchange.org" target="_blank">brcaexchange.org</a>. </p>
+    <div id="divPlotTabulator">
+    </div>
 </div>
 <script src="brcaVar.js"></script>
 </body>
