--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     -->
     <script src="plotly-latest.min.js"></script>
 <head>
-<body style="background-color:silver">
+<body style="background-color:white">
 
 
 <div class="container" id="brcaExchangeDiv">
